--- a/manifest.yml
+++ b/manifest.yml
@@ -12,7 +12,9 @@ plugin:
   # list of files, needed by python-pptx
   python-pptx:
     templates:
+
       - name: default-white.pptx
+        # format: 16:9
         slides:
           - type: "start"
             slide_idx: 0
@@ -53,6 +55,89 @@ plugin:
             bullets: 18
 
       - name: default-black.pptx
+        # format: 16:9
+        slides:
+          - type: "start"
+            slide_idx: 0
+            title: 0
+            subtitle: 1
+          - type: "start"
+            show_info: true
+            slide_idx: 0
+            title: 0
+            subtitle: 1
+          - type: "one"
+            slide_idx: 1
+            picture: 13
+          - type: "one"
+            show_info: true
+            slide_idx: 2
+            picture: 13
+            text: 14
+          - type: "duo"
+            slide_idx: 3
+            picture_left: 13
+            picture_right: 14
+          - type: "duo"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            picture_right: 14
+            text_left: 18
+            text_right: 19
+          - type: "bullets"
+            slide_idx: 5
+            title: 0
+            bullets: 18
+          - type: "bullets"
+            show_info: true
+            slide_idx: 5
+            title: 0
+            bullets: 18
+
+      - name: default-white-4-3.pptx
+        # format: 4:3
+        slides:
+          - type: "start"
+            slide_idx: 0
+            title: 0
+            subtitle: 1
+          - type: "start"
+            show_info: true
+            slide_idx: 0
+            title: 0
+            subtitle: 1
+          - type: "one"
+            slide_idx: 1
+            picture: 13
+          - type: "one"
+            show_info: true
+            slide_idx: 2
+            picture: 13
+            text: 14
+          - type: "duo"
+            slide_idx: 3
+            picture_left: 13
+            picture_right: 14
+          - type: "duo"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            picture_right: 14
+            text_left: 18
+            text_right: 19
+          - type: "bullets"
+            slide_idx: 5
+            title: 0
+            bullets: 18
+          - type: "bullets"
+            show_info: true
+            slide_idx: 5
+            title: 0
+            bullets: 18
+
+      - name: default-black-4-3.pptx
+        # format: 4:3
         slides:
           - type: "start"
             slide_idx: 0
