--- a/manifest.yml
+++ b/manifest.yml
@@ -53,6 +53,17 @@ plugin:
             slide_idx: 5
             title: 0
             bullets: 18
+          - type: "imageText"
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
+          - type: "imageText"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
 
       - name: default-black.pptx
         # format: 16:9
@@ -94,6 +105,17 @@ plugin:
             slide_idx: 5
             title: 0
             bullets: 18
+          - type: "imageText"
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
+          - type: "imageText"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
 
       - name: default-white-4-3.pptx
         # format: 4:3
@@ -135,6 +157,17 @@ plugin:
             slide_idx: 5
             title: 0
             bullets: 18
+          - type: "imageText"
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
+          - type: "imageText"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
 
       - name: default-black-4-3.pptx
         # format: 4:3
@@ -176,6 +209,17 @@ plugin:
             slide_idx: 5
             title: 0
             bullets: 18
+          - type: "imageText"
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
+          - type: "imageText"
+            show_info: true
+            slide_idx: 4
+            picture_left: 13
+            text_left: 18
+            text_right: 14
 
     qualities:
       - 10000
