--- a/manifest.master.yml
+++ b/manifest.master.yml
@@ -6,11 +6,14 @@ plugin:
   server:
     api-version:
       require: 1
+  l10n: l10n/PresentationPowerpoint.csv
   webfrontend:
     url: PresentationPowerpoint.js
     l10n: l10n/
-  # list of files, needed by python-pptx
-  python-pptx:
+
+  custom:
+
+    # list of files, needed by python-pptx
     templates:
 
       - name: default-white.pptx
@@ -228,4 +231,24 @@ plugin:
 
 
 python-2:
-  file: src/server/presentation-pptx.py
+  file: server/presentation-pptx.py
+
+
+base_url_prefix: webfrontend
+
+
+# callback registration in fylr
+callbacks:
+  export:
+    create_pptx:
+      exec:
+        service: python3
+        commands:
+          - prog: python3
+            stdout:
+              type: body
+            args:
+              - type: value
+                value: "%_exec.pluginDir%/server/presentation-pptx-fylr.py"
+              - type: value
+                value: "%info.json%"
