--- a/manifest.master.yml
+++ b/manifest.master.yml
@@ -6,10 +6,10 @@ plugin:
   server:
     api-version:
       require: 1
-  l10n: l10n/PresentationPowerpoint.csv
+  l10n: webfrontend/l10n/presentation-pptx.csv # l10n csv file for fylr
   webfrontend:
-    url: PresentationPowerpoint.js
-    l10n: l10n/
+    url: presentation-pptx.js
+    l10n: l10n/ # l10n json files for easydb5
 
   custom:
 
@@ -229,13 +229,11 @@ plugin:
       - 1024
       - 640
 
-
-python-2:
-  file: server/presentation-pptx.py
-
-
 base_url_prefix: webfrontend
 
+# callback registration in easydb5
+python-2:
+  file: build/server/presentation-pptx.py
 
 # callback registration in fylr
 callbacks:
