--- a/manifest.master.yml
+++ b/manifest.master.yml
@@ -1,5 +1,8 @@
 plugin:
   name: easydb-presentation-pptx-plugin
+  displayname:
+    en-US: "Presentation PPTX Export Plugin"
+    de-DE: "Präsentationen PPTX-Export Plugin"
   version: 1.0
   vendor: Programmfabrik GmbH
   server:
